RestaurantService correct the dependencies