@@ -5,44 +5,34 @@ import com.food.ordering.system.dataaccess.restaurant.exception.RestaurantDataAc
 import com.food.ordering.system.domain.valueobject.Money;
 import com.food.ordering.system.domain.valueobject.ProductId;
 import com.food.ordering.system.domain.valueobject.RestaurantId;
+import com.food.ordering.system.order.service.domain.entity.Product;
 import com.food.ordering.system.order.service.domain.entity.Restaurant;
-import com.food.ordering.system.restaurant.service.domain.entity.OrderDetail;
-import com.food.ordering.system.restaurant.service.domain.entity.Product;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
-
-import static java.util.stream.Collectors.toList;
+import java.util.stream.Collectors;
 
 @Component
 public class RestaurantDataAccessMapper {
-    public List<UUID> restaurantToRestaurantProduct(Restaurant restaurant) {
+
+    public List<UUID> restaurantToRestaurantProducts(Restaurant restaurant) {
         return restaurant.getProducts().stream()
                 .map(product -> product.getId().getValue())
-                .collect(toList());
+                .collect(Collectors.toList());
     }
 
     public Restaurant restaurantEntityToRestaurant(List<RestaurantEntity> restaurantEntities) {
-        RestaurantEntity restaurantEntity = restaurantEntities.stream()
-                .findFirst()
-                .orElseThrow(() -> new RestaurantDataAccessException("Restaurant could not be found!"));
+        final RestaurantEntity restaurantEntity =
+                restaurantEntities.stream().findFirst().orElseThrow(() ->
+                        new RestaurantDataAccessException("Restaurant could not be found!"));
 
-        List<Product> restaurantProducts = restaurantEntities.stream()
-                .map(entity ->
-                        Product.builder()
-                                .id(new ProductId(entity.getProductId()))
-                                .name(entity.getProductName())
-                                .price(new Money(entity.getProductPrice()))
-                                .available(entity.getProductAvailable())
-                                .build())
-                .collect(toList());
+        final List<Product> restaurantProducts = restaurantEntities.stream().map(entity ->
+                new Product(new ProductId(entity.getProductId()), entity.getProductName(),
+                        new Money(entity.getProductPrice()))).toList();
 
         return Restaurant.builder()
                 .restaurantId(new RestaurantId(restaurantEntity.getRestaurantId()))
-                .orderDetail(OrderDetail.builder()
-                        .products(restaurantProducts)
-                        .build())
                 .products(restaurantProducts)
                 .active(restaurantEntity.getRestaurantActive())
                 .build();
